# trainingpeaks-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: conftest.py
tests/integration/: test_cli_smoke.py  test_commands.py
tests/unit/: test_analysis.py  test_api.py  test_auth.py  test_classify.py  test_commands_common.py  test_config.py  test_date_ranges.py  test_export_command_helpers.py  test_markdown_exporter.py  test_parsing.py  test_upload.py
tp_cli/: __init__.py  __main__.py
tp_cli/commands/: __init__.py  analyze.py  auth.py  common.py  export.py  fetch.py  threshold.py  upload.py
tp_cli/core/: analysis.py  api.py  auth.py  classify.py  config.py  constants.py  models.py  state.py  upload.py
tp_cli/exporters/: json_export.py  markdown.py
tp_cli/utils/: date_ranges.py  formatting.py  parsing.py  text.py
