[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trainingpeaks-cli"
version = "0.1.0"
description = "AI-agent friendly CLI for TrainingPeaks workout management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jesse Heikkila" }
]
keywords = ["trainingpeaks", "cli", "training", "workouts"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.optional-dependencies]
browser = [
  "playwright>=1.40.0"
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.9.0",
  "mypy>=1.8.0"
]

[project.scripts]
tp = "tp_cli.__main__:main"
tp-cli = "tp_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tp_cli*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
warn_return_any = true
